store/src/styles/components/coupons_list.scss
.hern-coupons-list {
   padding: 16px;
}
.hern-coupons-list__header {
   margin-bottom: 16px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
}
.hern-coupons-list__heading {
   color: gray;
}
.hern-coupons-list__close-btn {
   border-radius: 9999px;
   border-width: 2px;
   border-color: rgba(52, 211, 153, 1);
   height: 1.5rem;
   width: 2rem;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
}
.hern-coupons-list__close-btn__icon {
   stroke: currentColor;
   color: rgba(52, 211, 153, 1);
}
.hern-coupons-list__coupon {
   padding: 8px;
   border: 1px dashed #cacaca;
   margin-bottom: 16px;
   border-radius: 4px;
}
.hern-coupons-list__coupon__top {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
   margin-bottom: 16px;
}
.hern-coupons-list__coupon__code {
   text-transform: uppercase;
   font-weight: 500;
}
.hern-coupons-list__coupon__apply-btn {
   color: teal;
}
.hern-coupons-list__coupon__title {
   display: block;
}
.hern-coupons-list__coupon__description {
   display: block;
}

// kiosk
.hern-kiosk-coupons-list__coupon {
   padding: 8px;
   border: 1px dashed #cacaca;
   border-radius: 4px;
   margin: 1em 0;
   width: 98% !important;
   display: inline-block;
}
.hern-kiosk-coupons-list__coupon__top {
   display: flex;
   justify-content: space-between;
   align-items: center;
}
.hern-kiosk-coupons-list__coupon__code {
   font-size: 1.5em;
   font-weight: 500;
}
.hern-kiosk-coupons-list__coupon__apply-btn {
   padding: 0.15em 2em;
   border-radius: 0.5em;
   letter-spacing: 0.08em;
}
.hern-kiosk-coupons-list__coupon__title {
   font-size: 1.2em;
}
.hern-kiosk-coupons-list__coupon__description {
   font-size: 1.2em;
}
.hern-kiosk__coupon-not-available {
   font-size: 1.5em;
   font-style: italic;
   font-weight: 500;
   margin-top: 1em;
}

//upfront
.hern-upfront-coupons-list {
   padding: 12px;
}

.hern-upfront-coupons-list__coupon-wrapper > .slick-dots > li > button {
   background: #38a169;
}
.hern-upfront-coupons-list__coupon-wrapper
   > .slick-dots
   > .slick-active
   > button {
   background: #38a169 !important;
}
.hern-upfront-coupons-list__carousal-wrapper {
   width: 93%;
   @media (max-width: 480px) {
      width: 100%;
   }
}
// adding arrows
.hern-upfront-coupons-list__carousal-arrow {
   position: relative;
   stroke: rgba(64, 64, 64, 0.4);
   bottom: calc(45% - 21px);
   z-index: 100000000000000;
   border-radius: 50%;
   cursor: pointer;
   width: 15%;
   height: 50%;
   padding: 0.3rem;
   border: 2px solid rgba(64, 64, 64, 0.4);
   &:hover {
      background: #f4f4f4;
   }
   @media (max-width: 480px) {
      display: none;
   }
}
.hern-upfront-coupons-list__carousal-left-arrow {
   left: -1%;
}
.hern-upfront-coupons-list__carousal-right-arrow {
   right: -1%;
}

.hern-upfront-coupons-list__coupon-wrapper > .slick-dots {
   bottom: 0rem;
   @media (max-width: 480px) {
      bottom: -2rem !important;
      display: block !important;
      left: 25%;
   }
}

.hern-upfront-coupons-list__coupon-wrapper
   > .slick-list
   > .slick-track
   > .slick-slide
   > div {
   border: 1px solid rgba(64, 64, 64, 0.25);
   box-sizing: border-box;
   border-radius: 12px;
   padding: 10px;
   margin-bottom: 12px;
}
.hern-upfront-coupons-list__coupon-wrapper > .slick-list > .slick-track {
   display: flex;
   flex-direction: row;
   width: 100%;
}

.hern-upfront-coupons-list__coupon {
   padding: 8px;
   display: flex !important;
   justify-content: space-between;
   border-radius: 8px;
   border: 1px dashed rgba(64, 64, 64, 0.6);
   min-height: 15rem;
}
.hern-upfront-coupons-list__coupon__scissor-icon {
   position: relative;
   right: -1.7rem;
   top: 7.5rem;
}
.hern-upfront-coupons-list__coupon__body-wrapper {
   margin: 0px;
   padding-left: 1em;
   padding-right: 0.5em;
   flex: 3;
}
.hern-upfront-coupons-list__coupon__title {
   color: rgba(64, 64, 64, 0.8);
   display: block;
   font-size: 18px;
   margin-bottom: 0px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
}
.hern-upfront-coupons-list__coupon__description {
   display: block;
   color: rgba(64, 64, 64, 0.6);
   font-size: 12px;
   line-height: 20px;
   margin-bottom: 0px;
}
.hern-upfront-coupons-list__coupon__apply-btn {
   box-sizing: border-box;
   border-radius: 12px;
   :disabled {
      color: #cacaca;
      cursor: no-drop;
   }
}
.hern-kiosk-coupons-list__coupon__code {
   font-size: 1.2em;
   font-weight: 500;
   line-height: 20px;
}
.hern-upfront-coupons-list__coupon__top {
   display: none;
}

